--- a/src/main/resources/com/audioplayer/audioPlayerView.fxml
+++ b/src/main/resources/com/audioplayer/audioPlayerView.fxml
@@ -4,10 +4,11 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: Silver;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.audioplayer.AudioPlayerController">
    <children>
       <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onSelectFileClick" prefHeight="75.0" prefWidth="150.0" text="Select File" />
       <TextArea fx:id="textArea" editable="false" layoutX="173.0" layoutY="14.0" prefHeight="150.0" prefWidth="613.0" promptText="File Name:" />
+      <Button layoutX="14.0" layoutY="511.0" mnemonicParsing="false" onAction="#onPlayPauseClick" prefHeight="75.0" prefWidth="150.0" text="Play / Pause" />
+      <Button layoutX="636.0" layoutY="511.0" mnemonicParsing="false" onAction="#onResetClick" prefHeight="75.0" prefWidth="150.0" text="Reset" />
    </children>
 </AnchorPane>
