--- a/src/main/resources/com/audioplayer/audioPlayerView.fxml
+++ b/src/main/resources/com/audioplayer/audioPlayerView.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: Silver;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.audioplayer.AudioPlayerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: indianred;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.audioplayer.AudioPlayerController">
    <children>
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onSelectFileClick" prefHeight="75.0" prefWidth="150.0" text="Select File" />
-      <TextArea fx:id="textArea" editable="false" layoutX="173.0" layoutY="14.0" prefHeight="150.0" prefWidth="613.0" promptText="File Name:" />
-      <Button layoutX="14.0" layoutY="511.0" mnemonicParsing="false" onAction="#onPlayPauseClick" prefHeight="75.0" prefWidth="150.0" text="Play / Pause" />
-      <Button layoutX="636.0" layoutY="511.0" mnemonicParsing="false" onAction="#onResetClick" prefHeight="75.0" prefWidth="150.0" text="Reset" />
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onSelectFileClick" prefHeight="50.0" prefWidth="150.0" text="Select File" />
+      <TextArea fx:id="textArea" editable="false" layoutX="173.0" layoutY="14.0" prefHeight="120.0" prefWidth="613.0" promptText="File Name:" />
+      <Button layoutX="14.0" layoutY="469.0" mnemonicParsing="false" onAction="#onPlayPauseClick" prefHeight="50.0" prefWidth="150.0" text="Play / Pause" />
+      <Button layoutX="14.0" layoutY="534.0" mnemonicParsing="false" onAction="#onResetClick" prefHeight="50.0" prefWidth="150.0" text="Reset" />
+      <Button layoutX="636.0" layoutY="536.0" mnemonicParsing="false" onAction="#onReverseClick" prefHeight="50.0" prefWidth="150.0" text="Reverse" />
+      <Slider fx:id="pitchSlider" blockIncrement="1.0" layoutX="185.0" layoutY="483.0" majorTickUnit="4.0" max="24.0" min="-24.0" minorTickCount="4" prefHeight="102.0" prefWidth="431.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
    </children>
 </AnchorPane>
