--- a/src/main/resources/com/audioplayer/audioPlayerView.fxml
+++ b/src/main/resources/com/audioplayer/audioPlayerView.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -40,10 +43,28 @@
             <Font name="SF Mono Bold" size="15.0" />
          </font>
       </Text>
-      <Button layoutX="636.0" layoutY="469.0" mnemonicParsing="false" onAction="#onSaveClick" prefHeight="50.0" prefWidth="150.0" text="Save">
+      <Button layoutX="14.0" layoutY="74.0" mnemonicParsing="false" onAction="#onSaveClick" prefHeight="50.0" prefWidth="150.0" text="Save">
          <font>
             <Font name="SF Mono Bold" size="13.0" />
          </font>
       </Button>
+      <LineChart fx:id="lineChart" animated="false" createSymbols="false" horizontalZeroLineVisible="false" layoutX="-6.0" layoutY="127.0" legendVisible="false" prefHeight="348.0" prefWidth="806.0">
+        <xAxis>
+          <NumberAxis animated="false" minorTickVisible="false" side="BOTTOM" tickLabelsVisible="false" tickMarkVisible="false" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis animated="false" autoRanging="false" lowerBound="-32768.0" minorTickVisible="false" side="LEFT" tickLabelsVisible="false" tickMarkVisible="false" upperBound="32768.0" />
+        </yAxis>
+      </LineChart>
+      <Button layoutX="711.0" layoutY="469.0" mnemonicParsing="false" onAction="#onBeatSwapClick" prefHeight="50.0" prefWidth="75.0" text="SWAP 2&amp;4" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font name="SF Mono Bold" size="13.0" />
+         </font>
+      </Button>
+      <TextField fx:id="tempo" layoutX="636.0" layoutY="469.0" prefHeight="50.0" prefWidth="75.0" promptText="BPM?">
+         <font>
+            <Font name="SF Mono Regular" size="15.0" />
+         </font>
+      </TextField>
    </children>
 </AnchorPane>
