--- a/src/main/resources/com/audioplayer/audioPlayerView.fxml
+++ b/src/main/resources/com/audioplayer/audioPlayerView.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import org.controlsfx.control.RangeSlider?>
 
 <AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1303.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.audioplayer.AudioPlayerController">
    <children>
@@ -95,16 +96,16 @@
             <Font name="SF Mono Bold" size="13.0" />
          </font>
       </Button>
-      <Button layoutX="1172.0" layoutY="14.0" mnemonicParsing="false" onAction="#onInfoClick" opacity="0.9" prefHeight="110.0" prefWidth="120.0" text="Info">
+      <Button layoutX="1172.0" layoutY="14.0" mnemonicParsing="false" onAction="#onInfoClick" prefHeight="110.0" prefWidth="120.0" text="Info">
          <font>
             <Font name="SF Mono Bold" size="13.0" />
          </font>
       </Button>
-      <Line endX="-33.39710998535156" endY="122.2840576171875" layoutX="176.0" layoutY="561.0" startX="-33.39710998535156" startY="-3.0" stroke="#e3dcd8" strokeWidth="2.0" />
+      <Line endX="-33.39710998535156" endY="127.0" layoutX="176.0" layoutY="561.0" startX="-33.39710998535156" startY="-3.0" stroke="#e3dcd8" strokeWidth="2.0" />
       <Slider fx:id="timelineSlider" blockIncrement="1.0" layoutX="140.0" layoutY="143.0" majorTickUnit="200.0" max="1.0" minorTickCount="0" onMousePressed="#onTimelineSliderPressed" onMouseReleased="#onTimelineSliderReleased" prefHeight="8.0" prefWidth="1027.0" />
-      <Line endX="-33.39710998535156" endY="122.2840576171875" layoutX="623.0" layoutY="561.0" startX="-33.39710998535156" startY="-3.0" stroke="#e3dcd8" strokeWidth="2.0" />
-      <Line endX="-33.39710998535156" endY="122.2840576171875" layoutX="755.0" layoutY="561.0" startX="-33.39710998535156" startY="-3.0" stroke="#e3dcd8" strokeWidth="2.0" />
-      <Line endX="-33.39710998535156" endY="122.2840576171875" layoutX="1128.0" layoutY="561.0" startX="-33.39710998535156" startY="-3.0" stroke="#e3dcd8" strokeWidth="2.0" />
+      <Line endX="-33.39710998535156" endY="127.0" layoutX="623.0" layoutY="561.0" startX="-33.39710998535156" startY="-3.0" stroke="#e3dcd8" strokeWidth="2.0" />
+      <Line endX="-33.39710998535156" endY="127.0" layoutX="755.0" layoutY="561.0" startX="-33.39710998535156" startY="-3.0" stroke="#e3dcd8" strokeWidth="2.0" />
+      <Line endX="-33.39710998535156" endY="127.0" layoutX="1128.0" layoutY="561.0" startX="-33.39710998535156" startY="-3.0" stroke="#e3dcd8" strokeWidth="2.0" />
       <Circle fx:id="monoIndicatorOn" fill="LIME" layoutX="1036.0" layoutY="660.0" opacity="0.4" radius="15.0" stroke="WHITE" strokeType="INSIDE" />
       <Circle fx:id="monoIndicatorOff" fill="RED" layoutX="1070.0" layoutY="660.0" radius="15.0" stroke="WHITE" strokeType="INSIDE" />
       <Circle fx:id="reverseIndicatorOn" fill="LIME" layoutX="1244.0" layoutY="600.0" opacity="0.4" radius="15.0" stroke="WHITE" strokeType="INSIDE" />
@@ -151,7 +152,7 @@
             <Font name="SF Mono Regular" size="15.0" />
          </font>
       </Text>
-      <Line endX="-33.39710998535156" endY="122.2840576171875" layoutX="918.0" layoutY="561.0" startX="-33.39710998535156" startY="-3.0" stroke="#e3dcd8" strokeWidth="2.0" />
+      <Line endX="-33.39710998535156" endY="127.0" layoutX="918.0" layoutY="561.0" startX="-33.39710998535156" startY="-3.0" stroke="#e3dcd8" strokeWidth="2.0" />
       <Line fx:id="crosshair" endX="-47.0" endY="108.0" layoutX="59.0" layoutY="409.0" startX="-47.0" startY="-232.5" stroke="RED" strokeWidth="1.5" />
       <Circle fx:id="invertIndicatorOn" fill="LIME" layoutX="1036.0" layoutY="600.0" opacity="0.4" radius="15.0" stroke="WHITE" strokeType="INSIDE" />
       <Circle fx:id="invertIndicatorOff" fill="RED" layoutX="1070.0" layoutY="600.0" radius="15.0" stroke="WHITE" strokeType="INSIDE" />
@@ -162,5 +163,16 @@
             <Font name="SF Mono Regular" size="15.0" />
          </font>
       </TextArea>
+      <RangeSlider fx:id="rangeSlider" blockIncrement="1.0" highValue="3.0" layoutX="140.0" layoutY="530.0" lowValue="0.0" prefHeight="8.0" prefWidth="1027.0" />
+      <Text fx:id="trimTimeLow" layoutX="56.0" layoutY="543.0" strokeType="OUTSIDE" strokeWidth="0.0" text="00:00" textAlignment="CENTER" wrappingWidth="87.21630859375">
+         <font>
+            <Font name="SF Mono Regular" size="15.0" />
+         </font>
+      </Text>
+      <Text fx:id="trimTimeHIgh" layoutX="1162.0" layoutY="543.0" strokeType="OUTSIDE" strokeWidth="0.0" text="00:00" textAlignment="CENTER" wrappingWidth="87.21630859375">
+         <font>
+            <Font name="SF Mono Regular" size="15.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
